--- a/src/Styles/Navigation.css
+++ b/src/Styles/Navigation.css
@@ -33,7 +33,7 @@
   .menu-button {
     position: absolute;
     top: 0.3rem;
-    left: 0.5rem;
+    right: 0.5rem;
     border-radius: 10px;
     background-color: #656262;
     color: #fff;
@@ -46,7 +46,7 @@
   .menu-card {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     width: 250px;
     height: 100vh;
     background-color: #333;
@@ -54,8 +54,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    z-index: 1;
+    justify-content: start;
+    z-index: 9999;
   }
   
   .menu-card-header {
